--- a/Ing_contacto.html
+++ b/Ing_contacto.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 45rem; margin: auto; margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
         <img class="card-img-top" src="..." alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Volver al Incio</h5>
