--- a/MantencionRuedas.html
+++ b/MantencionRuedas.html
@@ -23,18 +23,13 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="Servicios.html">Servicios</a>
               </li>
-
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="Contacto.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Contacto 
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Formulario Contacto</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="QuienesSomos.html">Quienes Somos</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active"  aria-current="page" href="Contacto.html" >
+                  Contacto
+                </a>
 
 
             <header> 
@@ -50,7 +45,7 @@
     <h1>AQUI VERA CON DETALLES LAS MANTENCIONES QUE HACEMOS A SUS NEUMATICOS</h1>
  
     <div class="col ml-5">
-        <div class="card" style="width: 20rem; margin: auto; margin: 0; position: absolute; top: 70%; left: 15%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
+        <div class="card" style="width: 20rem; margin: auto; margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
           <img class="card-img-top" src="MECANICOS/THOOBZOWCJCTTCNKAXJSMXNGYI.avif" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Mantencion Motor</h5>
@@ -62,8 +57,8 @@
       </div> 
   </div>
 
-<h2>En las mantencion de ruedas, nos encargamos, de alinear su vehiculo, balancear las ruedas, checkear los frenos y más.
-</h2>
+<h3 style="text-align:center;">En las mantencion de ruedas, nos encargamos, de alinear su vehiculo, balancear las ruedas, checkear los frenos y más.
+</h3>
 
 </body>
 </html>
