--- a/ReparacionMotor.html
+++ b/ReparacionMotor.html
@@ -23,18 +23,13 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="Servicios.html">Servicios</a>
               </li>
-
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="Contacto.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Contacto 
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Formulario Contacto</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="QuienesSomos.html">Quienes Somos</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active"  aria-current="page" href="Contacto.html" >
+                  Contacto
+                </a>
 
 
             <header> 
@@ -50,7 +45,7 @@
     <h1>AQUI VERA CON DETALLES LAS MANTENCIONES QUE HACEMOS A LOS VEHICULOS</h1>
  
     <div class="col ml-5">
-        <div class="card" style="width: 20rem; margin: auto; margin: 0; position: absolute; top: 70%; left: 15%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
+        <div class="card" style="width: 20rem; margin: auto; margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
           <img class="card-img-top" src="MECANICOS/t_ed3a650f8d5d4bada5664fa19caef51a_name_paul_walker_rapido_y_furioso.avif" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Mecanico</h5>
@@ -62,10 +57,10 @@
       </div> 
   </div>
 
-<h2>En las Reparaciones nos encargamos de revisar su transmision, 
+<h3 style="text-align: center;">En las Reparaciones nos encargamos de revisar su transmision, 
     la caja de cambios, el motor, la correa del motor, etc. 
     cualquier falla de su vehiculo nosotros la reparamos.
-</h2>
+</h3>
 
 </body>
 </html>
