--- a/CasoRayoMakween.html
+++ b/CasoRayoMakween.html
@@ -26,25 +26,25 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="CasoRayoMakween.html">Inicio</a>
           </li>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Servicios</a>
+                <a class="nav-link active" aria-current="page" href="Contacto.html">Servicios</a>
               </li>
 
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Nosotros 
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="QuienesSomos.html">Quienes Somos</a>
+              </li>
+
+
+              <li class="nav-item">
+                <a class="nav-link active"  aria-current="page" href="Contacto.html" >
+                  Contacto
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Formulario Contacto</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+
               </li>
 
 
@@ -60,7 +60,7 @@
 
 
 
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="width: 45rem; margin: auto; margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <!-- <img id = "imagenescarrusel" src="estilos/img/20-1472652044-1400x1400.png" class="d-block w-100" alt="..."> -->
@@ -68,9 +68,9 @@
 
 
             <div class="carousel-caption d-none d-md-block">
-                <h6>NUESTROS SERVICIOS</h6>
-                <p>Click a la imagen ver detalles </p>
+                <h6>NUESTROS SERVICIOS, CLICK AQUI PARA VER LOS SERVICIOS</h6>
               </div>
+
           </div>
           <div class="carousel-item">
             <img id = "imagenescarrusel" src="MantencionMotor/images.jpg" class="d-block w-100" alt="...">
@@ -149,7 +149,6 @@
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
 
 
 
