--- a/Contacto.html
+++ b/Contacto.html
@@ -27,18 +27,13 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="Servicios.html">Servicios</a>
               </li>
-
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="Contacto.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Contacto 
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Formulario Contacto</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="QuienesSomos.html">Quienes Somos</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active"  aria-current="page" href="Contacto.html" >
+                  Contacto
+                </a>
             <header> 
               <img id = "imagenlogo" src="estilos/img/car-logo-clipart-lightning-mcqueen-rayo-mcqueen-logo-para-1641338-removebg-preview.png" alt="Logo Taller Mecanico">
             </header>
