--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -19,17 +19,36 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="CasoRayoMakween.html">Inicio</a>
           </li>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Servicios</a>
+                <a class="nav-link active" aria-current="page" href="Servicios.html">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="QuienesSomos.html">Quienes Somos</a>
+              </li>
+
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="Contacto.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Contacto 
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Formulario Contacto</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
               </li>
 
 
 
+
+
+
+              
             <header> 
               <img id = "imagenlogo" src="estilos/img/car-logo-clipart-lightning-mcqueen-rayo-mcqueen-logo-para-1641338-removebg-preview.png" alt="Logo Taller Mecanico">
             </header>
