--- a/Servicios.html
+++ b/Servicios.html
@@ -46,7 +46,7 @@
         <img class="card-img-top" src="img/pngtree-car-mechanic-man-thinking-at-the-garage-fixing-the-engine-photo-image_2104549.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">MANTENCION GENERAL MOTOR</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text"> </p>
           <a href="MantencionMotor.html" class="btn btn-primary">Ir al Detalle</a>
         </div>
       </div>
@@ -57,7 +57,7 @@
         <img class="card-img-top" src="img/LOA130922-011F01.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">MANTENCION NEUMATICOS</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text"></p>
           <a href="MantencionRuedas.html" class="btn btn-primary">Ir al Detalle</a>
         </div>
       </div>
@@ -68,7 +68,7 @@
         <img class="card-img-top" src="img/istock-481678798-1.jpeg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">REPARACIÓN MOTOR</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text"></p>
           <a href="ReparacionMotor.html" class="btn btn-primary">Ir al Detalle</a>
         </div>
       </div>
