--- a/CasoRayoMakween.html
+++ b/CasoRayoMakween.html
@@ -73,10 +73,19 @@
 
           </div>
           <div class="carousel-item">
-            <img id = "imagenescarrusel" src="MantencionMotor/images.jpg" class="d-block w-100" alt="...">
+            <a title="NUESTROS SERVICIOS" href="Servicios.html"><img id = "imagenescarrusel" src="MantencionMotor/images.jpg" class="d-block w-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block">
+              <h6>NUESTROS SERVICIOS, CLICK AQUI PARA VER LOS SERVICIOS</h6>
+            </div>
+
+        </div>
           </div>
           <div class="carousel-item">
-            <img id = "imagenescarrusel" src="MantencionMotor/maxresdefault.jpg" class="d-block w-100" alt="...">
+            <a title="NUESTROS SERVICIOS" href="Servicios.html"><img id = "imagenescarrusel" src="MantencionMotor/maxresdefault.jpg" class="d-block w-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block">
+              <h6>NUESTROS SERVICIOS, CLICK AQUI PARA VER LOS SERVICIOS</h6>
+            </div>
+
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
