--- a/MantencionRuedas.html
+++ b/MantencionRuedas.html
@@ -11,37 +11,39 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">  
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 4rem; width: 150rem; border-radius: 3px;">  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="CasoRayoMakween.html"><p class = "nav-link active" style="width: 3rem; height: 1rem;">Inicio</p></a>
+      </li>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="CasoRayoMakween.html">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="Servicios.html"> <p class = "nav-link active" style="width: 5rem; height: 1rem;"> Servicios </p></a>
           </li>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Servicios.html">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="QuienesSomos.html">Quienes Somos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active"  aria-current="page" href="Contacto.html" >
-                  Contacto
-                </a>
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="QuienesSomos.html"><p class = "nav-link active" style="width: 8rem; height: 1rem;"> Quienes Somos </p></a>
+          </li>
 
 
-            <header> 
-              <img id = "imagenlogo" src="img/car-logo-clipart-lightning-mcqueen-rayo-mcqueen-logo-para-1641338-removebg-preview.png" alt="Logo Taller Mecanico">
-            </header>
+          <li class="nav-item">
+            <a class="nav-link active"  aria-current="page" href="Contacto.html"><p class = "nav-link active" style="width: 5rem; height: 1rem;"> Contacto </p></a>
+
+          </li>
+
+
+         <header> 
+          <img id = "imagenlogo" src="img/car-logo-clipart-lightning-mcqueen-rayo-mcqueen-logo-para-1641338-removebg-preview.png" alt="Logo Taller Mecanico">
+        </header> 
 
 
 
-          </div>
-        </div>
-      </nav>
-
+      </div>
+    </div>
+  </nav>
     <h1>AQUI VERA CON DETALLES LAS MANTENCIONES QUE HACEMOS A SUS NEUMATICOS</h1>
  
     <div class="col ml-5">
