--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -15,48 +15,39 @@
 <body>
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">  
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 4rem; width: 150rem; border-radius: 3px;">  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="CasoRayoMakween.html"><p class = "nav-link active" style="width: 3rem; height: 1rem;">Inicio</p></a>
+      </li>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="CasoRayoMakween.html">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="Servicios.html"> <p class = "nav-link active" style="width: 5rem; height: 1rem;"> Servicios </p></a>
           </li>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Servicios.html">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="QuienesSomos.html">Quienes Somos</a>
-              </li>
 
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="Contacto.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Contacto 
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Formulario Contacto</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="QuienesSomos.html"><p class = "nav-link active" style="width: 8rem; height: 1rem;"> Quienes Somos </p></a>
+          </li>
+
+
+          <li class="nav-item">
+            <a class="nav-link active"  aria-current="page" href="Contacto.html"><p class = "nav-link active" style="width: 5rem; height: 1rem;"> Contacto </p></a>
+
+          </li>
+
+
+         <header> 
+          <img id = "imagenlogo" src="img/car-logo-clipart-lightning-mcqueen-rayo-mcqueen-logo-para-1641338-removebg-preview.png" alt="Logo Taller Mecanico">
+        </header> 
 
 
 
-
-
-
-              
-            <header> 
-              <img id = "imagenlogo" src="estilos/img/car-logo-clipart-lightning-mcqueen-rayo-mcqueen-logo-para-1641338-removebg-preview.png" alt="Logo Taller Mecanico">
-            </header>
-
-
-          </div>
-        </div>
-      </nav>
+      </div>
+    </div>
+  </nav>
 
 
 
