--- a/Contacto.html
+++ b/Contacto.html
@@ -15,42 +15,47 @@
 
 <body>
     
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">  
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 4rem; width: 150rem; border-radius: 3px;">  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="CasoRayoMakween.html"><p class = "nav-link active" style="width: 3rem; height: 1rem;">Inicio</p></a>
+      </li>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="CasoRayoMakween.html">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="Servicios.html"> <p class = "nav-link active" style="width: 5rem; height: 1rem;"> Servicios </p></a>
           </li>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Servicios.html">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="QuienesSomos.html">Quienes Somos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active"  aria-current="page" href="Contacto.html" >
-                  Contacto
-                </a>
-            <header> 
-              <img id = "imagenlogo" src="estilos/img/car-logo-clipart-lightning-mcqueen-rayo-mcqueen-logo-para-1641338-removebg-preview.png" alt="Logo Taller Mecanico">
-            </header>
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="QuienesSomos.html"><p class = "nav-link active" style="width: 8rem; height: 1rem;"> Quienes Somos </p></a>
+          </li>
+
+
+          <li class="nav-item">
+            <a class="nav-link active"  aria-current="page" href="Contacto.html"><p class = "nav-link active" style="width: 5rem; height: 1rem;"> Contacto </p></a>
+
+          </li>
+
+
+         <header> 
+          <img id = "imagenlogo" src="img/car-logo-clipart-lightning-mcqueen-rayo-mcqueen-logo-para-1641338-removebg-preview.png" alt="Logo Taller Mecanico">
+        </header> 
 
 
 
-          </div>
-        </div>
-      </nav>
+      </div>
+    </div>
+  </nav>
 
       <main class="container shade">
 
         <section>
-            <h2>Contacto</h2>
+            <!-- <h2>Contacto</h2> -->
             <form class="form container-form" action="Ing_contacto.html" method="get">
                 <fieldset>
-                    <legend class="text-center header">Contactános llenando todos los campos</legend>
+                    <legend class="text-center header">Formulario Contacto</legend>
 
                     <div class="container-camp">
                         <div class="camp">
@@ -65,12 +70,12 @@
     
                         <div class="camp">
                             <label>Mensaje</label>
-                            <textarea class="input-text" id="mensaje" required></textarea>
+                            <textarea class="input-text" placeholder="Comentarios/Sugerencias..." id="mensaje" required></textarea>
                         </div>
                     </div>
 
                     <div class="align-right flex">
-                        <button class="btn btn-primary btn-lg" type="button" onclick="valForm()">Enviar</button>
+                        <button id = "btn"class="btn btn-primary btn-lg" type="button" onclick="valForm()">Enviar</button>
                     </div>
                 </fieldset>
             </form>
