--- a/Ing_login.html
+++ b/Ing_login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto Realizado</title>
+    <title>Login realizado</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos/estilos.css">
 </head>
@@ -12,9 +12,8 @@
 <div class="card" style="width: 45rem; margin: auto; margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
         <img class="card-img-top" src="img/oklogo.png" alt="Card image cap" style="width: 100px; height: 100px;">
         <div class="card-body">
-          <h5 class="card-title">Formulario Enviado</h5>
-          <p class="card-text">Contacto hecho con exito, nos contactaremos los mas
-            pronto posible con usted.</p>
+          <h5 class="card-title">Inicio de sesion realizado correctamente</h5>
+
           <a href="CasoRayoMakween.html" class="btn btn-primary">Ir al Inicio</a>
         </div>
 </body>
