--- a/MantencionRuedas.html
+++ b/MantencionRuedas.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 4rem; width: 150rem; border-radius: 3px;">  
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id = "navbar">  
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item">
@@ -53,7 +53,7 @@
             <h5 class="card-title">Mantencion Motor</h5>
             <p class="card-text">Mecanico: 
                 Este es nuestro mencanico Ethan, él se encarga de las Mantenciones de sus Vehiculos.</p>
-            <a href="Contacto.html" class="btn btn-primary">Contactar con Ethan</a>
+            <a href="Contacto.html" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Contactar con Ethan</a>
           </div>
         </div>
       </div> 
@@ -61,6 +61,78 @@
 
 <h3 style="text-align:center;">En las mantencion de ruedas, nos encargamos, de alinear su vehiculo, balancear las ruedas, checkear los frenos y más.
 </h3>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Confirmacion de Contacto</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p> Desea continuar con el proceso?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Atras</button>
+        <a class="nav-link active" aria-current="page" href="Contacto.html" id = "btnlogin"> Confirmar </a>
+
+
+      </div>
+    </div>
+  </div>
+</div>  
+
+
+<footer class="bg-dark text-center text-white" id = "Footer">
+  <!-- Grid container -->
+  <div class="container p-4 pb-0">
+    <!-- Section: Social media -->
+    <section class="mb-4">
+
+
+      <!-- Twitter -->
+      <a id = "imagenredes" class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><img id = "imagenfooter" src="img/png-transparent-computer-icons-twitter-logo-logo-monochrome-black-removebg-preview.png" /></a>
+
+
+      <!-- Instagram -->
+      <a id = "imagenredes" class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><img id = "imagenfooter"src="img/insta-removebg-preview.png" /></a>
+
+      <!-- Github -->
+      <a id = "imagenredes" class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><img id = "imagenfooter" src="img/png-transparent-computer-icons-facebook-blog-facebook-logo-desktop-wallpaper-facebook-icon-removebg-preview.png" /></a>
+
+
+
+    </section>
+    <!-- Section: Social media -->
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    Redes Sociales 
+    
+  </div>
+  <!-- Copyright -->
+
+</footer>
+
+
+
+
+
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+      <script src="JS/script.js"></script>
+
+
+
+
+
+
 
 </body>
 </html>
