--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -15,7 +15,7 @@
 <body>
 
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 4rem; width: 150rem; border-radius: 3px;">  
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id = "navbar">  
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item">
