--- a/Servicios.html
+++ b/Servicios.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-  
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 4rem; width: 150rem; border-radius: 3px;">  
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id = "navbar">  
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item">
@@ -76,10 +76,63 @@
         <div class="card-body">
           <h5 class="card-title">REPARACIÓN MOTOR</h5>
           <p class="card-text"></p>
-          <a href="ReparacionMotor.html" class="btn btn-primary">Ir al Detalle</a>
+          <a href="ReparacionMotor.html" class="btn btn-primary"> Ir al Detalle</a>
         </div>
       </div>
     </div> 
-</div>    
+</div>
+
+
+
+<footer class="bg-dark text-center text-white" id = "Footer">
+  <!-- Grid container -->
+  <div class="container p-4 pb-0">
+    <!-- Section: Social media -->
+    <section class="mb-4">
+
+
+      <!-- Twitter -->
+      <a id = "imagenredes" class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><img id = "imagenfooter" src="img/png-transparent-computer-icons-twitter-logo-logo-monochrome-black-removebg-preview.png" /></a>
+
+
+      <!-- Instagram -->
+      <a id = "imagenredes" class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><img id = "imagenfooter"src="img/insta-removebg-preview.png" /></a>
+
+      <!-- Github -->
+      <a id = "imagenredes" class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><img id = "imagenfooter" src="img/png-transparent-computer-icons-facebook-blog-facebook-logo-desktop-wallpaper-facebook-icon-removebg-preview.png" /></a>
+
+
+
+    </section>
+    <!-- Section: Social media -->
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    Redes Sociales 
+    
+  </div>
+  <!-- Copyright -->
+
+</footer>
+
+
+
+
+
+
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+      <script src="JS/script.js"></script>
+      
+
+
+
+
 </body>
 </html>
