--- a/CasoRayoMakween.html
+++ b/CasoRayoMakween.html
@@ -78,16 +78,15 @@
  
 
 
+<section>
 
 
 
 
-
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="border-top-left-radius: 10px; width: 80%;
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="border-top-left-radius: 10px; width: 35%; height: 80%;
       margin:1px;
       max-width: 1200px;
-      max-height: 50px;
-      "
+      max-height: 50px; "
     >
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -120,7 +119,7 @@
               </figure>
             </section>
             <div class="carousel-caption d-none d-md-block">
-              <h6>NUESTROS SERVICIOS, CLICK AQUI PARA VER LOS SERVICIOS</h6>
+              
              </div>
            
           </div>
@@ -134,7 +133,7 @@
           <span class="visually-hidden" >Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next" style="
-        border-top: 10px; width: 3rem; height: 2rem; margin: 1px; background-color: rgb(0, 0, 0); top: 200px; left: 1125px;
+        border-top: 10px; width: 3rem; height: 2rem; margin: 1px; background-color: rgb(0, 0, 0); top: 200px; left: 595px;
 
     ">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -143,21 +142,54 @@
       </div>
 
     </div>
-      <!-- <div>
 
-      <div class="card" style=" 
-      width: 25rem; height: 25rem; margin: 100px; margin: 0px; position: absolute; top: 50%; left: 20%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
-        <img src="img/imagescolumna.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
 
-    </div> -->
+
   </nav>
 
+<div>
+<h1 style=" background-color: rgb(51, 54, 54); height: 350px; margin: -60px; padding-left: 1500px; width: 2027px; border-radius: 10px; box-shadow: 5px 10px 8px #252525; border-radius: 25px;"><p style="position: relative; left: -350px; top: 50px; text-align: center; color: white; background-color: #1f1e1e; border-radius: 5px; color: white; text-shadow: black 0.1em 0.1em 0.2em">Bienvenido Taller Mecanico Rayo Makween</p>   <img  style = "left: -350px; position: relative; width: 300px; height: 300px; top: 100px;"src="img/car-logo-clipart-lightning-mcqueen-rayo-mcqueen-logo-para-1641338-removebg-preview.png" class="d-block w-100" alt="...">
+</h1>
+
+
+<div>
+
+
+
+<div>
+
+<h1 style=" background-color: rgb(51, 54, 54); height: 350px; margin: -60px; padding-left: 1500px; width: 2027px; border-radius: 10px; box-shadow: 5px 10px 8px #000000; border-radius: 25px;"><p style="position: relative; left: -350px; top: 50px; text-align: center; color: white;"></p> </h1>
+
+<div style=" background-color: rgb(51, 54, 54); height: 150px; margin: -60px; padding-left: 1500px; width: 2027px; border-radius: 10px; box-shadow: 5px 10px 8px #000000; border-radius: 25px;">
+  <h6 style="position: relative; left: -350px; top: 10px; text-align: center; color: white;  text-shadow: black 0.1em 0.1em 0.2em"> Nuestro objetivo principal es brindarte una experiencia única y confiable en cada visita. Como taller mecánico, nos esforzamos por construir relaciones duraderas con nuestros clientes.  </h6>
+  
+    <div class="card" style="width: 18rem; height: 20rem; margin: 1px; top: -275px; left: -1200px; border: 1px solid;
+    padding: 10px;
+    box-shadow: 5px 10px 8px #000000; border-radius: 25px;">
+      <div class="card-body">
+        <h5 class="card-text" style="text-align: center; color: #000000; margin: 10px; text-shadow: black 0.1em 0.1em 0.2em">Servicio al cliente, Calidad y Integridad</h5>
+        <p class="card-text" style="text-align: center ; "> En nuestro taller mecánico, nuestros valores fundamentales son la integridad, la calidad y el servicio al cliente. Estos valores nos guían en todas nuestras interacciones y nos definen como profesionales de confianza en la industria automotriz.</p>
+      </div>
+    </div>
+  
+  </div>
+
   
   
+  
+  
+  
+  
+  </h6>
+</div>
+
+
+<div>
+  <h1 style="position: relative; top: 200px; background-color: rgb(20, 20, 20); width: 500px; left: 720px; border-radius: 5px; text-shadow: black 0.1em 0.1em 0.2em"> Mas Informacion de los servicios </h1>
+</div>
+
+
+<div>
 
 
 
@@ -167,6 +199,41 @@
 
 
 
+
+  <div class="card" style="width: 20rem; height: 22rem; margin: 1px; top: 350px; left: 100px; border: 1px solid;
+  padding: 10px;
+  box-shadow: 5px 10px 8px #000000; border-radius: 25px;">
+    <img style = "width: 150px; height: 150px;"src="img/imagescolumna.png " class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title" style="text-align: center; text-shadow: black 0.1em 0.1em 0.2em">Reparaciones Certificadas</h5>
+      <p class="card-text" style="text-align: center;">Entendemos la importancia de brindar reparaciones certificadas de alta calidad para garantizar la seguridad y el rendimiento óptimo de su vehículo</p>
+    </div>
+  </div>
+
+
+  <div class="card" style="width: 20rem; height: 22rem; margin: 1px; top: -1px; left: 800px; border: 1px solid;
+  padding: 10px;
+  box-shadow: 5px 10px 8px #000000; border-radius: 25px;">
+    <img style = "width: 120px; height: 120px;"src="img/logocard.png " class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title" style="text-align: center; text-shadow: black 0.1em 0.1em 0.2em">Tipos de Servicios</h5>
+      <p class="card-text" style="text-align: center;">Ofrecemos una amplia gama de servicios para satisfacer todas sus necesidades de mantenimiento y reparación de vehículos. Nuestro objetivo es brindarte soluciones completas y confiables</p>
+    </div>
+  </div>
+
+
+
+  <div class="card" style="width: 20rem; height: 22rem; margin: 1px; top: -355px; left: 1500px; border: 1px solid;
+  padding: 10px;
+  box-shadow: 5px 10px 8px #000000; border-radius: 25px;">
+    <img style = "width: 90px; height: 90px;"src="img/logoeconomico.png " class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title" style="text-align: center; text-shadow: black 0.1em 0.1em 0.2em">Atenciones Economicas</h5>
+      <p class="card-text" style="text-align: center;"> Nuestro objetivo es proporcionarte servicios confiables y asequibles que mantengan tu vehículo en buen estado. Encontrarás servicios económicos que te permiten mantener tu vehículo en excelentes condiciones sin comprometer tu presupuesto.</p>
+    </div>
+  </div>
+
+</div>
 
 
 
