--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -57,8 +57,10 @@
     </strong>
         <div class="card-body">
           <blockquote class="blockquote mb-0">
-            <p style="text-align: center;">Una empresa dedicada al rubro desde 2013.</p>
-            <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus harum numquam, enim nemo assumenda cumque beatae reprehenderit optio minus magni maxime accusantium. Fugiat nulla eveniet officiis quasi labore eligendi quisquam perferendis, distinctio veniam hic doloremque explicabo beatae aliquam dolorum assumenda blanditiis nisi est, voluptatem repudiandae? Nesciunt quis deleniti aperiam, ratione magnam ullam minus quo sint qui deserunt. Quaerat delectus, repudiandae aut, veniam, accusamus labore quia facilis repellat obcaecati officia tempore doloremque. Explicabo, impedit earum rem magni pariatur ratione cupiditate sequi aut quam amet cum ullam. Officia porro optio est a, commodi minima quaerat. Corporis unde adipisci veritatis non ab quibusdam possimus facere nihil quia, accusamus, facilis velit perferendis nisi repellendus optio et quaerat rem iste exercitationem. Laborum possimus vel natus sequi dolorum? Omnis sunt impedit pariatur dolorum quibusdam accusamus necessitatibus quidem quasi, facere est laboriosam illo suscipit vel velit numquam libero aspernatur possimus, nobis maiores nihil dolore. Eligendi adipisci, consequuntur possimus nemo eos aperiam saepe voluptates ullam voluptatibus officia sed dolor! Temporibus modi fugiat, aspernatur ipsa corporis explicabo maxime! Ab unde molestias iure distinctio, eligendi esse asperiores recusandae itaque nam optio architecto impedit maxime reiciendis nostrum nihil libero, laudantium corporis ratione. Quae distinctio necessitatibus vel qui exercitationem voluptates et. Quisquam.</p>
+            <p style="text-align: center;">Una empresa dedicada al rubro automotriz desde 2013.</p>
+            <p style="text-align: justify;">Somos un taller mecánico dedicado a brindar servicios de alta calidad y confianza a nuestros clientes. Con años de experiencia en la industria automotriz, nos hemos consolidado como un referente en el área, ofreciendo soluciones eficientes y resultados duraderos.
+
+              En nuestro taller, contamos con un equipo de profesionales altamente capacitados y especializados.</p>
             <footer class="blockquote-footer" style="text-align: center;">Reprehenderit optio minus magni <cite title="Source Title"></cite></footer>
           </blockquote>
         </div>
