--- a/ReparacionMotor.html
+++ b/ReparacionMotor.html
@@ -45,7 +45,6 @@
     </div>
   </nav>
 
-    <h1>AQUI VERA CON DETALLES LAS MANTENCIONES QUE HACEMOS A LOS VEHICULOS</h1>
  
     <div class="col ml-5">
         <div class="card" style="width: 20rem; margin: auto; margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
@@ -53,17 +52,14 @@
           <div class="card-body">
             <h5 class="card-title">Mecanico</h5>
             <p class="card-text">SAMUEL: 
-                Este es nuestro mencanico Samuel, él se encarga de las reparaciones de sus Vehiculos.</p>
+                Este es nuestro mecanico Samuel, él se encarga de las reparaciones de sus Vehiculos.</p>
             <a href="Contacto.html" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Contactar con Samuel</a>
           </div>
         </div>
       </div> 
   </div>
 
-<h3 style="text-align: center;">En las Reparaciones nos encargamos de revisar su transmision, 
-    la caja de cambios, el motor, la correa del motor, etc. 
-    cualquier falla de su vehiculo nosotros la reparamos.
-</h3>
+
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
