--- a/MantencionMotor.html
+++ b/MantencionMotor.html
@@ -24,6 +24,7 @@
             <a class="nav-link active" aria-current="page" href="Servicios.html"> <p class = "nav-link active" style="width: 5rem; height: 1rem;"> Servicios </p></a>
           </li>
 
+    
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="QuienesSomos.html"><p class = "nav-link active" style="width: 8rem; height: 1rem;"> Quienes Somos </p></a>
           </li>
@@ -45,26 +46,34 @@
     </div>
   </nav>
 
-    <h1>AQUI VERA CON DETALLES LAS MANTENCIONES QUE HACEMOS A LOS VEHICULOS</h1>
- 
-    <div class="col ml-5">
-        <div class="card" style="width: 20rem; margin: auto; margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
-          <img class="card-img-top" src="MECANICOS/vin-diesel-confirma-fast-furious-8-201520765_1.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Mantencion Motor</h5>
-            <p class="card-text">MIGUEL: 
-                Este es nuestro mencanico Miguel, él se encarga de las Mantenciones de sus Vehiculos.</p>
-            <a href="Contacto.html" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Contactar con Miguel</a>
-          </div>
-        </div>
-      </div> 
-  </div>
+  <div class="col ml-5">
+    <div class="card" style="width: 25rem; margin: 10px; margin: 0; position: absolute; top: 35%; left: 15%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
+      <img class="card-img-top" src="MECANICOS/vin-diesel-confirma-fast-furious-8-201520765_1.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Mantencion Motor</h5>
+        <p class="card-text">MIGUEL: 
+            Este es nuestro mencanico Miguel, él se encarga de las Mantenciones de sus Vehiculos.</p>
+        <a href="Contacto.html" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Contactar con Miguel</a>
+      </div>
+    </div>
+  </div> 
+  <div>
 
-<h3 style="text-align:center;">En las Mantenciones de Motor, basicamente lo que hacemos, es analizar su vehiculo, viendo fallas, fugas, etc.
-   
-  
-</h3>
-<h3 style="text-align:center;"> Además cambiamos aceites, filtros, agua, etc. </h3>
+<div class="card text-center" style="width: 75rem;  margin: auto; margin: 0; position: absolute; top: 35%; left: 60%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); border-radius: 1%;">
+  <strong style="text-align: center;">
+    <div class="card-header">Mantenciones de Motor</div>
+      </strong>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <p style="text-align: justify;">Check Engine</p>
+            <p style="text-align: justify;">Scanner</p>
+            <p style="text-align: justify;">Cambio de Aceite</p>
+            <p style="text-align: justify;">Revisión de Liquidos</p>
+            <p style="text-align: justify;">Revisión de Caja de Cambios</p>
+            <p style="text-align: justify;">Revisión de Embriague</p>
+          </blockquote>
+        </div>
+</div>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
