--- a/MantencionRuedas.html
+++ b/MantencionRuedas.html
@@ -24,6 +24,7 @@
             <a class="nav-link active" aria-current="page" href="Servicios.html"> <p class = "nav-link active" style="width: 5rem; height: 1rem;"> Servicios </p></a>
           </li>
 
+    
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="QuienesSomos.html"><p class = "nav-link active" style="width: 8rem; height: 1rem;"> Quienes Somos </p></a>
           </li>
@@ -44,24 +45,36 @@
       </div>
     </div>
   </nav>
-    <h1>AQUI VERA CON DETALLES LAS MANTENCIONES QUE HACEMOS A SUS NEUMATICOS</h1>
- 
-    <div class="col ml-5">
-        <div class="card" style="width: 20rem; margin: auto; margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
-          <img class="card-img-top" src="MECANICOS/THOOBZOWCJCTTCNKAXJSMXNGYI.avif" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Mantencion Motor</h5>
-            <p class="card-text">Mecanico: 
-                Este es nuestro mencanico Ethan, él se encarga de las Mantenciones de sus Vehiculos.</p>
-            <a href="Contacto.html" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Contactar con Ethan</a>
-          </div>
-        </div>
-      </div> 
-  </div>
 
-<h3 style="text-align:center;">En las mantencion de ruedas, nos encargamos, de alinear su vehiculo, balancear las ruedas, checkear los frenos y más.
-</h3>
+  <div class="col ml-5">
+    <div class="card" style="width: 25rem; margin: auto; margin: 0; position: absolute; top: 40%; left: 10%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
+      <img class="card-img-top" src="MECANICOS/THOOBZOWCJCTTCNKAXJSMXNGYI.avif" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Mantencion Motor</h5>
+        <p class="card-text">Mecanico: 
+            Este es nuestro mencanico Ethan, él se encarga de las Mantenciones de sus Vehiculos.</p>
+        <a href="Contacto.html" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Contactar con Ethan</a>
+      </div>
+    </div>
+  </div> 
+</div>
 
+<div class="card text-center" style="width: 75rem;  margin: auto; margin: 0; position: absolute; top: 40%; left: 53%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); border-radius: 1%;">
+<strong style="text-align: center;">
+  <div class="card-header">Mantenciones de Ruedas</div>
+</strong>
+<div class="card-body">
+  <blockquote class="blockquote mb-0">
+    <p style="text-align: justify;">Presión de los Neumaticos</p>
+    <p style="text-align: justify;">Balanceo</p>
+    <p style="text-align: justify;">Alineacion</p>
+    <p style="text-align: justify;">Liquido de Freno</p>
+    <p style="text-align: justify;">Cambio de Pastilla de Freno</p>
+    <p style="text-align: justify;">Cambio de Disco de Freno</p>
+    <footer class="blockquote-footer" style="text-align: center;">@Derechos Reservados <cite title="Source Title"></cite></footer>
+  </blockquote>
+</div>
+</div>
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -75,8 +88,6 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Atras</button>
         <a class="nav-link active" aria-current="page" href="Contacto.html" id = "btnlogin"> Confirmar </a>
-
-
       </div>
     </div>
   </div>
@@ -115,24 +126,10 @@
   <!-- Copyright -->
 
 </footer>
-
-
-
-
-
-
-
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
       <script src="JS/script.js"></script>
-
-
-
-
-
-
-
 </body>
 </html>
