--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -24,9 +24,6 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Servicios.html"> <p class = "nav-link active" style="width: 5rem; height: 1rem;"> Servicios </p></a>
-          </li>
 
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="QuienesSomos.html"><p class = "nav-link active" style="width: 8rem; height: 1rem;"> Quienes Somos </p></a>
@@ -51,15 +48,17 @@
 
 
 
-      <div class="card text-center" style="width: 100rem;  margin: auto; margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); border-radius: 1%;">
-        <strong style="text-align: center;">
-        <div class="card-header">Quienes somos</div>
-    </strong>
-        <div class="card-body">
-          <blockquote class="blockquote mb-0">
-            <p style="text-align: center;">Una empresa dedicada al rubro desde 2013.</p>
-            <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus harum numquam, enim nemo assumenda cumque beatae reprehenderit optio minus magni maxime accusantium. Fugiat nulla eveniet officiis quasi labore eligendi quisquam perferendis, distinctio veniam hic doloremque explicabo beatae aliquam dolorum assumenda blanditiis nisi est, voluptatem repudiandae? Nesciunt quis deleniti aperiam, ratione magnam ullam minus quo sint qui deserunt. Quaerat delectus, repudiandae aut, veniam, accusamus labore quia facilis repellat obcaecati officia tempore doloremque. Explicabo, impedit earum rem magni pariatur ratione cupiditate sequi aut quam amet cum ullam. Officia porro optio est a, commodi minima quaerat. Corporis unde adipisci veritatis non ab quibusdam possimus facere nihil quia, accusamus, facilis velit perferendis nisi repellendus optio et quaerat rem iste exercitationem. Laborum possimus vel natus sequi dolorum? Omnis sunt impedit pariatur dolorum quibusdam accusamus necessitatibus quidem quasi, facere est laboriosam illo suscipit vel velit numquam libero aspernatur possimus, nobis maiores nihil dolore. Eligendi adipisci, consequuntur possimus nemo eos aperiam saepe voluptates ullam voluptatibus officia sed dolor! Temporibus modi fugiat, aspernatur ipsa corporis explicabo maxime! Ab unde molestias iure distinctio, eligendi esse asperiores recusandae itaque nam optio architecto impedit maxime reiciendis nostrum nihil libero, laudantium corporis ratione. Quae distinctio necessitatibus vel qui exercitationem voluptates et. Quisquam.</p>
-            <footer class="blockquote-footer" style="text-align: center;">Reprehenderit optio minus magni <cite title="Source Title"></cite></footer>
-          </blockquote>
-        </div>
-      </div>
+  <img src="img/67204.jpg" style="width: 60rem;  margin: auto; margin: 0; position: absolute; top: 37%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); border-radius: 20%;">
+
+  <div class="card text-center" style="width: 100rem;  margin: auto; margin: 0; position: absolute; top: 80%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); border-radius: 1%;">
+    <strong style="text-align: center;">
+    <div class="card-header">Quienes somos</div>
+</strong>
+    <div class="card-body">
+      <blockquote class="blockquote mb-0">
+        <p style="text-align: center;">Una empresa dedicada al rubro desde 2013.</p>
+        <p style="text-align: justify;">Somos un taller mecanico, dedicado para todo lo que necesitas, nuestra empresa constituida por los sres. Adan Albarran y Martin Estay, se ha dedicado durante 10 años en el rubro de la mecanica automotriz. Somos conocidos de modo nacional, con distintas sucursales repartidas en todo Chile. Nosotros Solucionamos tus problemas de tú auto.</p>
+        <footer class="blockquote-footer" style="text-align: center;">Reprehenderit optio minus magni <cite title="Source Title"></cite></footer>
+      </blockquote>
+    </div>
+  </div>
