--- a/ReparacionMotor.html
+++ b/ReparacionMotor.html
@@ -24,6 +24,7 @@
             <a class="nav-link active" aria-current="page" href="Servicios.html"> <p class = "nav-link active" style="width: 5rem; height: 1rem;"> Servicios </p></a>
           </li>
 
+
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="QuienesSomos.html"><p class = "nav-link active" style="width: 8rem; height: 1rem;"> Quienes Somos </p></a>
           </li>
@@ -45,26 +46,35 @@
     </div>
   </nav>
 
-    <h1>AQUI VERA CON DETALLES LAS MANTENCIONES QUE HACEMOS A LOS VEHICULOS</h1>
- 
-    <div class="col ml-5">
-        <div class="card" style="width: 20rem; margin: auto; margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
-          <img class="card-img-top" src="MECANICOS/t_ed3a650f8d5d4bada5664fa19caef51a_name_paul_walker_rapido_y_furioso.avif" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Mecanico</h5>
-            <p class="card-text">SAMUEL: 
-                Este es nuestro mencanico Samuel, él se encarga de las reparaciones de sus Vehiculos.</p>
-            <a href="Contacto.html" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Contactar con Samuel</a>
-          </div>
-        </div>
-      </div> 
+</div>
+<div class="col ml-5">
+  <div class="card" style="width: 20rem; margin: auto; margin: 0; position: absolute; top: 35%; left: 15%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
+    <img class="card-img-top" src="MECANICOS/t_ed3a650f8d5d4bada5664fa19caef51a_name_paul_walker_rapido_y_furioso.avif" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Mecanico</h5>
+      <p class="card-text">SAMUEL: 
+          Este es nuestro mencanico Samuel, él se encarga de las reparaciones de sus Vehiculos.</p>
+      <a href="Contacto.html" class="btn btn-primary">Contactar con Samuel</a>
+    </div>
   </div>
+</div> 
+</div>
 
-<h3 style="text-align: center;">En las Reparaciones nos encargamos de revisar su transmision, 
-    la caja de cambios, el motor, la correa del motor, etc. 
-    cualquier falla de su vehiculo nosotros la reparamos.
-</h3>
-
+<div class="card text-center" style="width: 75rem;  margin: auto; margin: 0; position: absolute; top: 35%; left: 60%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); border-radius: 1%;">
+<strong style="text-align: center;">
+  <div class="card-header">Reparación de Motor</div>
+    </strong>
+      <div class="card-body">
+        <blockquote class="blockquote mb-0">
+          <p style="text-align: justify;">Cambio de Embriague</p>
+          <p style="text-align: justify;">Rectificación de Motor</p>
+          <p style="text-align: justify;">Rectificación de Partes </p>
+          <p style="text-align: justify;">Maquinado de Piezas</p>
+          <p style="text-align: justify;">Recuperado de Motores</p>
+        </blockquote>
+    </div>
+</div>
+</div>
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
