--- a/CasoRayoMakween.html
+++ b/CasoRayoMakween.html
@@ -33,8 +33,6 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Servicios.html"> <p class = "nav-link active" style="width: 5rem; height: 1rem;"> Servicios </p></a>
-              </li>
 
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="QuienesSomos.html"><p class = "nav-link active" style="width: 8rem; height: 1rem;"> Quienes Somos </p></a>
@@ -174,7 +172,45 @@
   
   </div>
 
-  
+  <div>
+    <h1 style="position: relative; top: 200px; background-color: rgb(20, 20, 20); width: 500px; left: 720px; border-radius: 5px; text-shadow: black 0.1em 0.1em 0.2em"> SERVICIOS </h1>
+  </div>
+  <div class:="card-body"> 
+    <br>
+        <div class="col ml-5">
+          <div class="card" style="width: 25rem;margin: auto; margin: 0; position: absolute; top: 133%; left: 20%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
+            <img class="card-img-top" src="img/pngtree-car-mechanic-man-thinking-at-the-garage-fixing-the-engine-photo-image_2104549.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">MANTENCION GENERAL MOTOR</h5>
+              <p class="card-text"> </p>
+              <a href="MantencionMotor.html" class="btn btn-primary">Ir al Detalle</a>
+            </div>
+          </div>
+        </div>
+    <br>
+        <div class="col ml-20">
+          <div class="card" style="width: 25rem; margin: auto; margin: 10; position: absolute; top: 133%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
+            <img class="card-img-top" src="img/LOA130922-011F01.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">MANTENCION NEUMATICOS</h5>
+              <p class="card-text"></p>
+              <a href="MantencionRuedas.html" class="btn btn-primary">Ir al Detalle</a>
+            </div>
+          </div>
+        </div>
+    <br>
+        <div class="col ml-5">
+          <div class="card" style="width: 25rem; margin: auto; margin: 0; position: absolute; top: 133%; left: 80%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
+            <img class="card-img-top" src="img/istock-481678798-1.jpeg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">REPARACIÓN MOTOR</h5>
+              <p class="card-text"></p>
+              <a href="ReparacionMotor.html" class="btn btn-primary"> Ir al Detalle</a>
+            </div>
+          </div>
+        </div> 
+    </div>
+    
   
   
   
@@ -182,24 +218,26 @@
   
   </h6>
 </div>
-
-
+<BR>
+</BR>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <div>
   <h1 style="position: relative; top: 200px; background-color: rgb(20, 20, 20); width: 500px; left: 720px; border-radius: 5px; text-shadow: black 0.1em 0.1em 0.2em"> Mas Informacion de los servicios </h1>
 </div>
-
-
 <div>
-
-
-
-
-
-
-
-
-
-
   <div class="card" style="width: 20rem; height: 22rem; margin: 1px; top: 350px; left: 100px; border: 1px solid;
   padding: 10px;
   box-shadow: 5px 10px 8px #000000; border-radius: 25px;">
